--- a/src/main/resources/static/styles/letter.css
+++ b/src/main/resources/static/styles/letter.css
@@ -6716,11 +6716,11 @@ header.navbar .navbar-toggle .icon-bar {
 .list-head {
     display: block;
     float: left;
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     overflow: hidden;
     border: 1px solid #ededed;
-    border-radius: 50px;
+    border-radius: 50%;
 }
 .l-operate-bar {
     white-space: nowrap;
