--- a/src/main/resources/static/styles/discuss.css
+++ b/src/main/resources/static/styles/discuss.css
@@ -727,7 +727,7 @@ textarea.reply-input.reply-input-textarea {
 }
 
 .nk-content .discuss-detail {
-    width: 585px
+    width: 93%;
 }
 
 .discuss-head {
