--- a/src/main/resources/static/styles/ui.css
+++ b/src/main/resources/static/styles/ui.css
@@ -2100,7 +2100,7 @@ a .icon-flip-horizontal:before, a .icon-flip-vertical:before, a .icon-rotate-180
 
 .nk-main {
 
-    padding-bottom: 250px;
+    padding-bottom: 30px;
     margin: 0 auto;
     width: 1000px
 }
@@ -2115,7 +2115,7 @@ a .icon-flip-horizontal:before, a .icon-flip-vertical:before, a .icon-rotate-180
 
 .nk-content {
     float: left;
-    width: 950px;
+    width: 100%;
     margin: 0 10px 0 0
 }
 
@@ -2563,17 +2563,7 @@ button, input[type=button], input[type=submit] {
     width: 100%
 }
 
-.uneditable-input, input[type=email], input[type=password], input[type=text], textarea {
-    border: 1px solid #ddd;
-    color: #34495e;
-    font-family: Lato, sans-serif;
-    font-size: 14px;
-    padding: 8px 5px 7px;
-    width: 248px;
-    height: 22px;
-    border-radius: 3px;
-    outline: 0
-}
+
 
 .control-group.focus .uneditable-input, .control-group.focus input[type=email], .control-group.focus input[type=password], .control-group.focus input[type=text], .control-group.focus textarea, .uneditable-input:focus, input[type=email]:focus, input[type=password]:focus, input[type=text]:focus, textarea:focus {
     border-color: #999
@@ -4248,7 +4238,8 @@ table .dropdown-menu li.active > a, table .dropdown-menu li.selected > a {
     margin: 20px 0 0;
     font-size: 12px;
     font-weight: 700;
-    letter-spacing: -4px
+    letter-spacing: -4px;
+    width: 93%;
 }
 
 .pagination li {
@@ -4293,7 +4284,8 @@ table .dropdown-menu li.active > a, table .dropdown-menu li.selected > a {
     border: 1px solid #25bb9b;
     color: #25bb9b;
     text-align: center;
-    line-height: 30px
+    line-height: 30px;
+    border-radius: 5px;
 }
 
 .ellipsis-pager {
