--- a/src/main/resources/static/styles/login.css
+++ b/src/main/resources/static/styles/login.css
@@ -1,9 +1,9 @@
-body,h1,h2 {
+body, h1, h2 {
     margin: 0;
     padding: 0
 }
 
-button,input {
+button, input {
     margin: 0;
     font-family: inherit;
     font-size: 100%
@@ -20,6 +20,7 @@ a {
 a:hover {
     text-decoration: underline
 }
+
 a:hover {
     color: #25bb9b;
 }
@@ -28,7 +29,7 @@ a:hover {
     *zoom: 1
 }
 
-.clearfix:before,.clearfix:after {
+.clearfix:before, .clearfix:after {
     display: table;
     content: ""
 }
@@ -61,7 +62,7 @@ a:hover {
     text-decoration: none
 }
 
-.sign-flow .view .input-wrapper,.sign-flow .view .button-wrapper,.sign-flow .view .signin-misc-wrapper {
+.sign-flow .view .input-wrapper, .sign-flow .view .button-wrapper, .sign-flow .view .signin-misc-wrapper {
     margin-top: 18px
 }
 
@@ -78,13 +79,13 @@ a:hover {
     color: #555;
     border: 1px solid #1672B9;
     border-radius: 5px;
-    box-shadow: inset 0 1px 2px rgba(15,82,135,.25),0 1px 0 rgba(255,255,255,.15)
+    box-shadow: inset 0 1px 2px rgba(15, 82, 135, .25), 0 1px 0 rgba(255, 255, 255, .15)
 }
 
 .sign-flow .view .input-wrapper input:focus {
     background: #fff;
     outline: 0;
-    box-shadow: inset 0 1px 2px rgba(15,82,135,.25),0 0 10px rgba(255,255,255,.3);
+    box-shadow: inset 0 1px 2px rgba(15, 82, 135, .25), 0 0 10px rgba(255, 255, 255, .3);
     border: 1px solid #197CC9
 }
 
@@ -101,14 +102,14 @@ a:hover {
     float: right
 }
 
-@media (max-width :740px) {
+@media (max-width: 740px) {
     .sign-flow .view {
         float: none;
         margin: 0 auto;
         width: 248px
     }
 
-    .sign-flow .view .input-wrapper,.sign-flow .view .button-wrapper,.sign-flow .view .signin-misc-wrapper {
+    .sign-flow .view .input-wrapper, .sign-flow .view .button-wrapper, .sign-flow .view .signin-misc-wrapper {
         margin-top: 22px
     }
 
@@ -125,26 +126,28 @@ a:hover {
     text-align: center;
     float: left;
     width: 145px;
-    text-shadow: 0 1px 1px rgba(0,0,0,.2);
+    text-shadow: 0 1px 1px rgba(0, 0, 0, .2);
     background: #80c3f7;
-    background: -webkit-linear-gradient(top,#80c3f7,#6bbaf8);
-    background: linear-gradient(to bottom,#80c3f7,#6bbaf8);
+    background: -webkit-linear-gradient(top, #80c3f7, #6bbaf8);
+    background: linear-gradient(to bottom, #80c3f7, #6bbaf8);
     border: 1px solid #1D80CF;
     border-radius: 5px;
-    box-shadow: inset 0 1px 0 rgba(255,255,255,.3),0 1px 1px rgba(50,50,50,.05);
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, .3), 0 1px 1px rgba(50, 50, 50, .05);
     outline: 0;
     cursor: pointer;
-    -webkit-tap-highlight-color: rgba(0,0,0,0)
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0)
 }
+
 .sign-button + .sign-button {
     margin-left: 10px;
 }
+
 .sign-button:active {
     color: #eee;
     border: 1px solid #0971C5;
-    background: -webkit-linear-gradient(top,#5dadec,#51a4e6);
-    background: linear-gradient(to bottom,#5dadec,#51a4e6);
-    box-shadow: inset 0 1px 2px rgba(0,0,0,.1),0 1px 0 rgba(255,255,255,.1)
+    background: -webkit-linear-gradient(top, #5dadec, #51a4e6);
+    background: linear-gradient(to bottom, #5dadec, #51a4e6);
+    box-shadow: inset 0 1px 2px rgba(0, 0, 0, .1), 0 1px 0 rgba(255, 255, 255, .1)
 }
 
 .sign-flow {
@@ -170,7 +173,7 @@ a:hover {
     overflow: hidden
 }
 
-.sign-flow .view .input-wrapper+.input-wrapper {
+.sign-flow .view .input-wrapper + .input-wrapper {
     border-top: 1px solid #e8e8e8
 }
 
@@ -180,7 +183,7 @@ a:hover {
     box-sizing: border-box
 }
 
-.sign-flow .view .input-wrapper input,.sign-flow .view .input-wrapper input:focus {
+.sign-flow .view .input-wrapper input, .sign-flow .view .input-wrapper input:focus {
     border: 0;
     border-radius: 0;
     box-shadow: none;
@@ -195,6 +198,7 @@ a:hover {
 .sign-flow a {
     color: inherit
 }
+
 .sign-flow a:hover {
     color: #25bb9b;
 }
@@ -208,7 +212,7 @@ a:hover {
     color: #fff
 }
 
-.sign-flow .sign-button:focus,html.no-touchevents .sign-flow .sign-button:hover {
+.sign-flow .sign-button:focus, html.no-touchevents .sign-flow .sign-button:hover {
     background: #00B091
 }
 
@@ -220,20 +224,20 @@ a:hover {
     margin: 0 auto;
     width: 46px;
     height: 46px;
-    background: url(../imagse/log.png) no-repeat;
+
     background-size: contain
 }
 
-@media (max-width :740px) {
+@media (max-width: 740px) {
     .index-header .logo {
         width: 96px;
         height: 44.4px
     }
 }
 
-@media (-webkit-min-device-pixel-ratio:2),(min-resolution:2dppx),(min-resolution:192dpi) {
+@media (-webkit-min-device-pixel-ratio: 2),(min-resolution: 2dppx),(min-resolution: 192dpi) {
     .index-header .logo {
-        background-image: url(/static/revved/img/index/logo@2x.e4e2b466.png)
+
     }
 }
 
@@ -244,7 +248,7 @@ a:hover {
     line-height: 1
 }
 
-html,body {
+html, body {
     height: 100%
 }
 
@@ -252,7 +256,7 @@ body {
     color: #555;
     font-size: 15px;
     line-height: 1.7;
-    font-family: 'Helvetica Neue',Helvetica,'PingFang SC','Hiragino Sans GB','Microsoft YaHei',Arial,sans-serif;
+    font-family: 'Helvetica Neue', Helvetica, 'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei', Arial, sans-serif;
     background: #f7fafc;
     -webkit-font-smoothing: subpixel-antialiased
 }
@@ -262,7 +266,7 @@ body {
     margin-bottom: -42px
 }
 
-@media (max-width :740px) {
+@media (max-width: 740px) {
     .index-main {
         margin-bottom: -102px
     }
@@ -274,7 +278,7 @@ body {
     width: 300px
 }
 
-@media (min-width :741px) {
+@media (min-width: 741px) {
     .index-main {
         text-align: center;
         white-space: nowrap;
@@ -299,7 +303,7 @@ body {
     }
 }
 
-@media (min-width :741px) and (max-height:600px) {
+@media (min-width: 741px) and (max-height: 600px) {
     .index-main {
         height: auto
     }
@@ -307,3 +311,11 @@ body {
 
 @supports (-webkit-backdrop-filter:blur(18px)) {
 }
+
+.logger{
+    text-align: center;
+    color: red;
+    
+}
+
+img { max-width: 100%; height: auto; width: auto; width: auto; }
